# kalamari

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/: browser_bench.rs
src/: error.rs  lib.rs  main.rs
src/browser/: browser.rs  config.rs  crawler.rs  form.rs  frameworks.rs  iframe.rs  metrics.rs  mod.rs  page.rs  pdf.rs  pool.rs  scripts.rs  session.rs
src/dom/: document.rs  element.rs  mod.rs  node.rs  parser.rs  selector.rs
src/http/: client.rs  cookie.rs  mod.rs  request.rs  response.rs
src/js/: bindings.rs  dom_api.rs  mod.rs  runtime.rs  timers.rs  value.rs
src/network/: event.rs  interceptor.rs  interceptor_trait.rs  mod.rs
src/security/: clobbering.rs  csp.rs  mod.rs  sri.rs
src/xss/: detector.rs  mod.rs  payloads.rs  sinks.rs  stored.rs
